feat: Update to manifest 3

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -16,13 +16,11 @@
 			</header>
 			<form class="form-options" id="form-options">
 				<div class="control-container">
-					<label class="control-label" for="file">Snippet File</label>
+					<label class="control-label" for="file">Prender la luz (desactiva el modo oscuro de algunas páginas)</label>
 					<input
 						class="control-input"
-						id="file"
-						accept="application/json"
-						type="file"
-						required
+						id="enableLightMode"
+						type="checkbox"
 					/>
 				</div>
 				<div class="control-container">
