feat: Update to manifest 3

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -24,6 +24,14 @@
 					/>
 				</div>
 				<div class="control-container">
+					<label class="control-label" for="file">Mostrar carreras como stories en perfil de usuario</label>
+					<input
+						class="control-input"
+						id="enableStoriesProfile"
+						type="checkbox"
+					/>
+				</div>				
+				<div class="control-container">
 					<button id="btn-settings" class="btn" type="submit">
 						Save
 					</button>
