feat: documentation for x-ray

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -30,7 +30,15 @@
 						id="enableStoriesProfile"
 						type="checkbox"
 					/>
-				</div>				
+				</div>
+				<div class="control-container">
+					<label class="control-label" for="file">Activar X-RAY</label>
+					<input
+						class="control-input"
+						id="enableXRay"
+						type="checkbox"
+					/>
+				</div>								
 				<div class="control-container">
 					<button id="btn-settings" class="btn" type="submit">
 						Save
